Fix font size and text align

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 .ulmain {
-    text-align: center;
+    text-align: left;
     font-family: "Times New Roman", sans-serif;
-    font-size: 50px;
+    font-size: 25px;
 }
